--- a/src/app/layout/health/health.component.html
+++ b/src/app/layout/health/health.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let exchangeHealthEntry of exchangesHealth | keyvalue">
-    <app-health-panel [exchangeHealth]="exchangeHealthEntry.value"></app-health-panel>
+<div class="row">
+    <div *ngFor="let exchangeHealthEntry of exchangesHealth | keyvalue"
+         class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
+        <app-health-panel [exchangeHealth]="exchangeHealthEntry.value"></app-health-panel>
+    </div>
 </div>
