Make views more mobile friendly

--- a/src/app/layout/exchange-users/exchange-user-edit/exchange-user-edit.component.html
+++ b/src/app/layout/exchange-users/exchange-user-edit/exchange-user-edit.component.html
@@ -66,6 +66,7 @@
                         </ng-template>
                     </ngb-panel>
                 </ngb-accordion>
+                <button type="submit" class="btn btn-primary save mt-3" [disabled]="createForm.invalid || loading">Save</button>
             </div>
         </div>
     </form>
