--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,20 +1,20 @@
 <app-page-header [heading]="'Wallets'"></app-page-header>
 <div class="row">
     <div class="col-12">
-        <button class="btn btn-sm btn-info mr-1" (click)="refreshAllWallets()"
+        <button class="btn btn-sm btn-info mr-1 mb-1" (click)="refreshAllWallets()"
                 [disabled]="pending">
             <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh wallets
         </button>
-        <button type="button" class="btn btn-sm mr-1"
+        <button type="button" class="btn btn-sm mr-1 mb-1"
                 (click)="flipBalancesViewType()">
             Show summary per user <i class="fa" [class.fa-toggle-on]="!showBalancesPerExchange"
                                      [class.fa-toggle-off]="showBalancesPerExchange"></i>
         </button>
-        <button (click)="flipShowingUnderOneDollar()" type="button" class="btn btn-sm">
+        <button (click)="flipShowingUnderOneDollar()" type="button" class="btn btn-sm mb-1">
             Show small amounts <i class="fa" [class.fa-toggle-on]="showUnder1Dollar"
                                   [class.fa-toggle-off]="!showUnder1Dollar"></i>
         </button>
-        <div class="text-muted ml-auto">
+        <div class="text-muted ml-auto mb-1">
             <small>
                 Last refresh: {{ (getLastWalletsRefreshTime() | date: 'y-MM-dd HH:mm:ss') || '-' }}
             </small>
@@ -25,7 +25,7 @@
     <div *ngFor="let exchangeUser of exchangeUsers" class="card mb-3 bg-dark exchange-user-wallet">
         <div class="card-header d-flex flex-column">
             <div class="d-flex flex-row mb-2">
-                <h3>{{ exchangeUser.name }}</h3>
+                <h3><i class="fa fa-user"></i> {{ exchangeUser.name }}</h3>
             </div>
         </div>
         <div class="d-flex flex-row m-3">
@@ -47,52 +47,54 @@
             </div>
         </div>
         <ng-container *ngFor="let exchangeBalance of exchangeUser.exchangeBalances">
-            <h4 class="m-3">{{ exchangeBalance.exchangeName }}</h4>
+            <span class="badge badge-light"><i class="fa fa-money" aria-hidden="true"></i> {{ exchangeBalance.exchangeName }}</span>
             <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
                     {{ exchangeBalance.errorMessage }}
                 </span>
             <span *ngIf="exchangeBalance.currencyBalances.length == 0 && exchangeBalance.errorMessage == null"
                   class="alert">No currencies held</span>
-            <table *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
-                   class="card-body table table-sm table-dark table-hover">
-                <thead>
-                <tr>
-                    <th>Currency</th>
-                    <th class="text-right">Available</th>
-                    <th class="text-right">Frozen</th>
-                    <th class="text-right">Total</th>
-                    <th class="text-right">BTC Price</th>
-                    <th class="text-right">BTC value <i class="fa fa-sort-amount-desc" aria-hidden="true"></i></th>
-                    <th class="text-right">USD value</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let currencyBalance of getSortedBalances(exchangeBalance.currencyBalances)">
-                    <td class="sensitive-data">{{ currencyBalance.currencyCode }}</td>
-                    <td class="text-right sensitive-data">{{ currencyBalance.available | number : '1.8-8' }}</td>
-                    <td class="text-right sensitive-data">{{ currencyBalance.frozen | number : '1.8-8' }}</td>
-                    <td class="text-right sensitive-data">{{ currencyBalance.total | number : '1.8-8' }}</td>
-                    <td class="text-right sensitive-data">{{ currencyBalance.btcPrice | number : '1.8-8' }}</td>
-                    <td class="text-right sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}
-                    </td>
-                    <td class="text-right sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="text-right font-weight-bold sensitive-data">
-                        {{ getTotalExchangeBtcValue(exchangeBalance) | number : '1.8' }}
-                    </td>
-                    <td class="text-right font-weight-bold sensitive-data">
-                        {{ getTotalExchangeUsdValue(exchangeBalance) | number : '1.2' }}
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
+                 class="table-responsive mb-3">
+                <table class="card-body table table-sm table-dark table-hover">
+                    <thead>
+                    <tr>
+                        <th>Currency</th>
+                        <th class="text-right">Available</th>
+                        <th class="text-right">Frozen</th>
+                        <th class="text-right">Total</th>
+                        <th class="text-right">BTC Price</th>
+                        <th class="text-right">BTC value <i class="fa fa-sort-amount-desc" aria-hidden="true"></i></th>
+                        <th class="text-right">USD value</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let currencyBalance of getSortedBalances(exchangeBalance.currencyBalances)">
+                        <td class="sensitive-data">{{ currencyBalance.currencyCode }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.available | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.frozen | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.total | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.btcPrice | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}
+                        </td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="text-right font-weight-bold sensitive-data">
+                            {{ getTotalExchangeBtcValue(exchangeBalance) | number : '1.8' }}
+                        </td>
+                        <td class="text-right font-weight-bold sensitive-data">
+                            {{ getTotalExchangeUsdValue(exchangeBalance) | number : '1.2' }}
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </ng-container>
     </div>
 </div>
