Add google analytics script and register page submitting to google form

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,10 +25,10 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn rounded-btn" [disabled]="loginForm.invalid"> Log in</button>
-                <!-- <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Log in </a> -->
-                <!--&nbsp;-->
-                 <a class="btn register rounded-btn" href="http://bit.ly/2Wu5rtd">Register</a>
+                <button type="submit" class="btn rounded-btn" [disabled]="loginForm.invalid">Log in</button>
+                <a class="btn register rounded-btn" [routerLink]="['/signup']">
+                    Sign up for free
+                </a>
             </form>
         </div>
     </div>
