--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,28 +1,64 @@
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
-        <div class="col-md-4">
-            <img class="user-avatar" src="assets/images/logo.png" width="150px" />
-            <h1>SB Admin BS4 Angular5</h1>
-            <form role="form">
-                <div class="form-content">
-                    <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Full Name">
-                    </div>
+        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
 
-                    <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Email">
+            <div *ngIf="!isShowingThankYou">
+                <h1>Try the trading automation for free</h1>
+                <form id="signupForm" ngForm role="form" (ngSubmit)="onSubmit(signupForm)" #signupForm="ngForm">
+                    <div class="form-content">
+                        <div class="form-group">
+                            <input [(ngModel)]="email" name="email"
+                                   required
+                                   id="email" tabindex="0" type="text" placeholder="Email"
+                                   class="form-control input-underline input-lg"
+                                   [class.is-invalid]="isEmailInvalid"
+                                   (input)="onEmailInput()">
+                            <div class="invalid-feedback">
+                                Provide valid email
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input [(ngModel)]="questionOne" name="questionOne"
+                                   required
+                                   id="question1" type="text"
+                                   class="form-control input-underline input-lg"
+                                   placeholder="What would you like to automate most?"
+                                   [class.is-invalid]="isQuestionOneInvalid"
+                                   (input)="onQuestionOneInput()">
+                            <div class="invalid-feedback">
+                                Provide a question
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input id="question2" type="text" class="form-control input-underline input-lg"
+                                   placeholder="Questions?">
+                        </div>
                     </div>
+                    <button type="submit" [disabled]="isSubmitInProgress"
+                            class="btn register rounded-btn">
+                        Sign up for free
+                    </button>
+                </form>
 
-                    <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Repeat Password">
-                    </div>
-                </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Register </a>&nbsp;
-                <a class="btn rounded-btn" [routerLink]="['/login']"> Log in </a>
-            </form>
+            </div>
+            <div *ngIf="isShowingThankYou">
+                <h1>Thank you</h1>
+                You're going to get email with first time login password soon. I'm currently sending the
+                emails manually, so expect the email send directly from mikolaj.grzaslewicz@gmail.com
+            </div>
         </div>
     </div>
 </div>
+<form id="googleForm" class="d-none"
+      action="https://docs.google.com/forms/d/e/1FAIpQLSdG_NLD8CTQT6uTQ9OWBXelMxzGsE0Mod9BrOEB67tkfoLf6w/formResponse"
+      style="display: none;" method="POST"
+      target="googleFormIframe">
+    <input id="googleFormEmailAddress" type="hidden" name="emailAddress">
+    <input id="googleFormQ1" type="hidden" name="entry.907240285">
+    <!-- what would you like to automate most -->
+    <input id="googleFormQ2" type="hidden" name="entry.1397752312"> <!-- questions? -->
+</form>
+<iframe #iframe width="0" height="0" border="none"
+        class="d-none"
+        id="googleFormIframe"
+        name="googleFormIframe"></iframe>
