--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -43,8 +43,7 @@
             </div>
             <div *ngIf="isShowingThankYou">
                 <h1>Thank you</h1>
-                You're going to get email with first time login password soon. I'm currently sending the
-                emails manually, so expect the email send directly from mikolaj.grzaslewicz@gmail.com
+                Please check your email, you should get message with first time login password soon.
             </div>
         </div>
     </div>
