--- a/src/app/layout/trading-automation/add-strategy-execution/sell-when-second-currency-grows-parameters/sell-when-second-currency-grows-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/sell-when-second-currency-grows-parameters/sell-when-second-currency-grows-parameters.component.html
@@ -1,6 +1,21 @@
 <div class="row">
     <div class="col-12">
         <div class="form-group">
+            <label for="secondCurrencyExchangeName">Second currency exchange</label>
+            <select class="form-control"
+                    name="secondCurrencyExchangeName"
+                    (change)="onSecondCurrencyExchangeName($event.target)">
+                <option *ngFor="let exchangeName of exchangeNamesSupportedForTrading"
+                        [selected]="exchangeName === defaultSecondCurrencyExchangeName">
+                    {{exchangeName}}
+                </option>
+            </select>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="form-group">
             <label for="secondCurrencyPairToWatch">Second currency pair to watch, eg. BTC/USDT</label>
             <div class="input-group">
                 <input name="secondCurrencyPairToWatch"
