Display in blue exchanges that can read prices at exchanges health view

--- a/src/app/layout/health/exchange-health-tile/exchange-health-tile.component.html
+++ b/src/app/layout/health/exchange-health-tile/exchange-health-tile.component.html
@@ -1,4 +1,4 @@
-<div class="card text-white bg-{{exchangeHealth.isHealthy === true? 'success' : 'danger'}} m-2">
+<div class="card text-white bg-{{getTileBackgroundColorBasedOnHealth()}} m-2">
     <div class="card-header">
         <div class="flex-row">
             <div class="d-block"><i class="fa fa-heartbeat"></i> {{exchangeHealth.exchangeName}}</div>
@@ -7,8 +7,8 @@
     <div class="card-body pt-0 pb-0" [@myAnimation]="slide">
         <div class="pt-3 pb-3">
             <ul>
-                <li *ngFor="let item of exchangeHealth.details | keyvalue">
-                    {{item.key}}: {{item.value === true ? 'OK' : item.value === false ? 'Bad' : 'Unknown'}}
+                <li *ngFor="let capability of exchangeHealth.capabilities">
+                    {{capability.name}}: {{capability.capable === true ? 'OK' : capability.capable === false ? 'Bad' : 'Unknown'}}
                 </li>
             </ul>
             <div>Last check: {{exchangeHealth.timestamp | date: 'y-MM-dd HH:mm:ss' }}</div>
